[gd_scene load_steps=19 format=3 uid="uid://c5ex3ui68bpy3"]

[ext_resource type="Shader" uid="uid://bwrhhx067mqoh" path="res://shaders/7-segment_display.tres" id="1_mhb64"]
[ext_resource type="Script" path="res://scripts/bgm_control.gd" id="1_wukb3"]
[ext_resource type="Script" path="res://scripts/fail_finish_scene.gd" id="2_c4bwp"]
[ext_resource type="PackedScene" uid="uid://can6od2otra6s" path="res://scenes/canvas_ui/button.tscn" id="3_ab2el"]
[ext_resource type="PackedScene" uid="uid://dqo2dmq5e7cdq" path="res://models/pop-it-3d.blend" id="3_ret02"]
[ext_resource type="PackedScene" uid="uid://b8tsw525wce4u" path="res://scenes/canvas_ui/btn_click.tscn" id="4_2jrpf"]
[ext_resource type="Script" path="res://scripts/pop-it-memory.gd" id="4_3utf0"]
[ext_resource type="Material" uid="uid://biid58nhbbja7" path="res://materials/Material.tres" id="5_etnpw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i5waq"]
shader = ExtResource("1_mhb64")
shader_parameter/SkewAngle = 0.0
shader_parameter/Size = 32.0
shader_parameter/SegmentWidth = 0.15
shader_parameter/SegmentOffsetRatio = 0.5
shader_parameter/Number = 0
shader_parameter/ON = true
shader_parameter/SegmentOnColor = Color(1, 0, 0, 1)
shader_parameter/SegmentOffColor = Color(1, 1, 1, 0)
shader_parameter/BackgroundColor = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n16dm"]
shader = ExtResource("1_mhb64")
shader_parameter/SkewAngle = 0.0
shader_parameter/Size = 32.0
shader_parameter/SegmentWidth = 0.15
shader_parameter/SegmentOffsetRatio = 0.5
shader_parameter/Number = 0
shader_parameter/ON = true
shader_parameter/SegmentOnColor = Color(1, 0, 0, 1)
shader_parameter/SegmentOffColor = Color(1, 1, 1, 0)
shader_parameter/BackgroundColor = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3wsk0"]
shader = ExtResource("1_mhb64")
shader_parameter/SkewAngle = 0.0
shader_parameter/Size = 32.0
shader_parameter/SegmentWidth = 0.15
shader_parameter/SegmentOffsetRatio = 0.5
shader_parameter/Number = 1
shader_parameter/ON = true
shader_parameter/SegmentOnColor = Color(1, 0, 0, 1)
shader_parameter/SegmentOffColor = Color(1, 1, 1, 0)
shader_parameter/BackgroundColor = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n2uq6"]
shader = ExtResource("1_mhb64")
shader_parameter/SkewAngle = 0.0
shader_parameter/Size = 32.0
shader_parameter/SegmentWidth = 0.15
shader_parameter/SegmentOffsetRatio = 0.5
shader_parameter/Number = 0
shader_parameter/ON = true
shader_parameter/SegmentOnColor = Color(1, 0, 0, 1)
shader_parameter/SegmentOffColor = Color(1, 1, 1, 0)
shader_parameter/BackgroundColor = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w8de3"]
shader = ExtResource("1_mhb64")
shader_parameter/SkewAngle = 0.0
shader_parameter/Size = 32.0
shader_parameter/SegmentWidth = 0.15
shader_parameter/SegmentOffsetRatio = 0.5
shader_parameter/Number = 0
shader_parameter/ON = true
shader_parameter/SegmentOnColor = Color(1, 0, 0, 1)
shader_parameter/SegmentOffColor = Color(1, 1, 1, 0)
shader_parameter/BackgroundColor = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_onfj2"]
shader = ExtResource("1_mhb64")
shader_parameter/SkewAngle = 0.0
shader_parameter/Size = 32.0
shader_parameter/SegmentWidth = 0.15
shader_parameter/SegmentOffsetRatio = 0.5
shader_parameter/Number = 0
shader_parameter/ON = true
shader_parameter/SegmentOnColor = Color(1, 0, 0, 1)
shader_parameter/SegmentOffColor = Color(1, 1, 1, 0)
shader_parameter/BackgroundColor = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mvqdh"]
shader = ExtResource("1_mhb64")
shader_parameter/SkewAngle = 0.0
shader_parameter/Size = 32.0
shader_parameter/SegmentWidth = 0.15
shader_parameter/SegmentOffsetRatio = 0.5
shader_parameter/Number = 0
shader_parameter/ON = true
shader_parameter/SegmentOnColor = Color(1, 0, 0, 1)
shader_parameter/SegmentOffColor = Color(1, 1, 1, 0)
shader_parameter/BackgroundColor = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m2en8"]
shader = ExtResource("1_mhb64")
shader_parameter/SkewAngle = 0.0
shader_parameter/Size = 32.0
shader_parameter/SegmentWidth = 0.15
shader_parameter/SegmentOffsetRatio = 0.5
shader_parameter/Number = 0
shader_parameter/ON = true
shader_parameter/SegmentOnColor = Color(1, 0, 0, 1)
shader_parameter/SegmentOffColor = Color(1, 1, 1, 0)
shader_parameter/BackgroundColor = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tswex"]
shader = ExtResource("1_mhb64")
shader_parameter/SkewAngle = 0.0
shader_parameter/Size = 32.0
shader_parameter/SegmentWidth = 0.15
shader_parameter/SegmentOffsetRatio = 0.5
shader_parameter/Number = 0
shader_parameter/ON = true
shader_parameter/SegmentOnColor = Color(1, 0, 0, 1)
shader_parameter/SegmentOffColor = Color(1, 1, 1, 0)
shader_parameter/BackgroundColor = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7ejb1"]
shader = ExtResource("1_mhb64")
shader_parameter/SkewAngle = 0.0
shader_parameter/Size = 32.0
shader_parameter/SegmentWidth = 0.15
shader_parameter/SegmentOffsetRatio = 0.5
shader_parameter/Number = 0
shader_parameter/ON = true
shader_parameter/SegmentOnColor = Color(1, 0, 0, 1)
shader_parameter/SegmentOffColor = Color(1, 1, 1, 0)
shader_parameter/BackgroundColor = Color(0, 0, 0, 1)

[node name="popit_memory" type="Node3D"]
script = ExtResource("1_wukb3")

[node name="FinishLevelScene" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_c4bwp")

[node name="ColorRect" type="ColorRect" parent="FinishLevelScene"]
layout_mode = 1
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="FinishLevelScene"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="FinishLevelScene/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="HBoxContainer" type="HBoxContainer" parent="FinishLevelScene/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="FinishLevelScene/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="FinishLevelScene/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Game Completed!"

[node name="Score" type="Label" parent="FinishLevelScene/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart" parent="FinishLevelScene/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_ab2el")]
layout_mode = 2
text = "Restart"

[node name="GameModeSelect" parent="FinishLevelScene/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_ab2el")]
layout_mode = 2
text = "Game Mode Select"

[node name="MainMenu" parent="FinishLevelScene/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_ab2el")]
layout_mode = 2
text = "Main Menu
"

[node name="Timer" type="Timer" parent="FinishLevelScene"]
wait_time = 0.1
one_shot = true

[node name="btn_click" parent="FinishLevelScene" instance=ExtResource("4_2jrpf")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score_Display" type="Node2D" parent="CanvasLayer"]

[node name="level_100" type="ColorRect" parent="CanvasLayer/Score_Display"]
material = SubResource("ShaderMaterial_i5waq")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 711.0
offset_top = 294.0
offset_right = 751.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2

[node name="level_10" type="ColorRect" parent="CanvasLayer/Score_Display"]
material = SubResource("ShaderMaterial_n16dm")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 743.0
offset_top = 294.0
offset_right = 783.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2

[node name="level_1" type="ColorRect" parent="CanvasLayer/Score_Display"]
material = SubResource("ShaderMaterial_3wsk0")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 775.0
offset_top = 294.0
offset_right = 815.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2

[node name="1000000" type="ColorRect" parent="CanvasLayer/Score_Display"]
material = SubResource("ShaderMaterial_n2uq6")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 850.0
offset_top = 294.0
offset_right = 890.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2

[node name="100000" type="ColorRect" parent="CanvasLayer/Score_Display"]
material = SubResource("ShaderMaterial_w8de3")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 882.0
offset_top = 294.0
offset_right = 922.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2

[node name="10000" type="ColorRect" parent="CanvasLayer/Score_Display"]
material = SubResource("ShaderMaterial_onfj2")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 914.0
offset_top = 294.0
offset_right = 954.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2

[node name="1000" type="ColorRect" parent="CanvasLayer/Score_Display"]
material = SubResource("ShaderMaterial_mvqdh")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 946.0
offset_top = 294.0
offset_right = 986.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2

[node name="100" type="ColorRect" parent="CanvasLayer/Score_Display"]
material = SubResource("ShaderMaterial_m2en8")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 978.0
offset_top = 294.0
offset_right = 1018.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2

[node name="10" type="ColorRect" parent="CanvasLayer/Score_Display"]
material = SubResource("ShaderMaterial_tswex")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1010.0
offset_top = 294.0
offset_right = 1050.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2

[node name="1" type="ColorRect" parent="CanvasLayer/Score_Display"]
material = SubResource("ShaderMaterial_7ejb1")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1042.0
offset_top = 294.0
offset_right = 1082.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2

[node name="pop-it-3d" parent="." instance=ExtResource("3_ret02")]
script = ExtResource("4_3utf0")
transl_mat = ExtResource("5_etnpw")

[node name="1_001" parent="pop-it-3d/1" index="0"]
gi_mode = 2

[node name="1_004" parent="pop-it-3d/2" index="0"]
gi_mode = 2

[node name="1_003" parent="pop-it-3d/3" index="0"]
gi_mode = 2

[node name="1_008" parent="pop-it-3d/4" index="0"]
gi_mode = 2

[node name="1_010" parent="pop-it-3d/5" index="0"]
gi_mode = 2

[node name="1_012" parent="pop-it-3d/6" index="0"]
gi_mode = 2

[node name="1_014" parent="pop-it-3d/7" index="0"]
gi_mode = 2

[node name="1_016" parent="pop-it-3d/8" index="0"]
gi_mode = 2

[node name="1_018" parent="pop-it-3d/9" index="0"]
gi_mode = 2

[node name="1_020" parent="pop-it-3d/10" index="0"]
gi_mode = 2

[connection signal="pressed" from="FinishLevelScene/MarginContainer/HBoxContainer/VBoxContainer/Restart" to="FinishLevelScene" method="_on_restart_pressed"]
[connection signal="pressed" from="FinishLevelScene/MarginContainer/HBoxContainer/VBoxContainer/GameModeSelect" to="FinishLevelScene" method="_on_game_mode_select_pressed"]
[connection signal="pressed" from="FinishLevelScene/MarginContainer/HBoxContainer/VBoxContainer/MainMenu" to="FinishLevelScene" method="_on_main_menu_pressed"]
[connection signal="timeout" from="FinishLevelScene/Timer" to="FinishLevelScene" method="_on_timer_timeout"]

[editable path="pop-it-3d"]
